--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -63,7 +63,7 @@
           https://instagram.com/{{ site.instagram.username }}
         {%- elsif entry.type == 'email' -%}
           {% assign email = site.social.email | split: '@' %}
-          javascript:location.href = 'mailto:' + ['{{ email[0] }}','{{ email[1] }}'].join('@')
+<!--           javascript:location.href = 'mailto:' + ['{{ email[0] }}','{{ email[1] }}'].join('@') -->
         {%- elsif entry.type == 'rss' -%}
           {{ "/feed.xml" | relative_url }}
         {%- else -%}
