--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -72,7 +72,7 @@
       {% endcapture %}
 
       {% if url %}
-      <a href="{{ url }}" aria-label="{{ entry.type }}" title="{{ site.cocial.email }}"
+      <a href="{{ url }}" aria-label="{{ entry.type }}" title="{{ site.social.email }}"
         {% unless site.theme_mode %}class="order-{{ forloop.index | plus: 2 }}"{% endunless %}
         {% unless entry.noblank %}target="_blank" rel="noopener"{% endunless %}>
         <i class="{{ entry.icon }}"></i>
