--- a/raccoon-responsive/css/main.css
+++ b/raccoon-responsive/css/main.css
@@ -1,8 +1,9 @@
-COMMON body {
-}
+@charset "UTF-8";
+
+/* COMMON  */
 
 .body__container {
-  font-family: "Roboto", sans-serif;
+  font-family: "Roboto", "Noto Sans KR", sans-serif;
   font-size: 16px;
   font-weight: 400;
   color: #333;
@@ -12,17 +13,34 @@ a {
   text-decoration: none;
 }
 
+.float--left {
+  float: left;
+}
+.float--right {
+  float: right;
+}
+/* FLOAT CLEARFIX */
+.clearfix::after {
+  content: "";
+  clear: both;
+  display: block;
+}
+
 /* BUTTON */
 .btn {
+  /* inline-flex -> flex */
+  display: flex;
+  align-items: center;
   height: 34px;
-  background: #eee linear-gradient(to bottom, #fcfcfc, #eee);
+  padding: 0 12px;
   border: 1px solid #d5d5d5;
   border-radius: 4px;
-  display: inline-flex;
-  align-items: center;
-  padding: 0 12px;
+  font-size: 14px;
   font-weight: 500;
+  color: #333;
   line-height: 1.5;
+  text-align: center;
+  background: #eee linear-gradient(to bottom, #fcfcfc, #eee);
   cursor: pointer;
   box-sizing: border-box;
   position: relative;
@@ -36,25 +54,25 @@ a {
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.07);
-  color: #333;
 }
 
 .btn.btn--primary {
-  border: 1px solid #65b836;
+  /* 나중에 버튼 색상 바꿀까? */
+  border: 1px solid #1e212d;
   color: #fff;
-  background: #55a532 linear-gradient(#91dd70, #55ae2e);
+  background: #383e56 linear-gradient(#383e56, #252525);
 }
 
 /* INPUT */
 .input--text {
   height: 34px;
   padding: 0 10px;
+  font-size: 16px;
   border: 1px solid #ddd;
   border-radius: 5px;
-  box-sizing: border-box;
   outline: none;
+  box-sizing: border-box;
   box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.075);
-  font-size: 16px;
 }
 
 .input--text:focus {
@@ -64,33 +82,24 @@ a {
 }
 
 /* Vendor Prefix(실험적 기능) */
-/* prettier-ignore */
+
 .input--text::-webkit-input-placeholder {
   color: #cacaca;
 }
+
 .input--text::-ms-input-placeholder {
   color: #cacaca;
 }
+
 .input--text::-moz-input-placeholder {
   color: #cacaca;
 }
 
-/* FLOAT CLEARFIX */
-.clearfix::after {
-  content: "";
-  clear: both;
-  display: block;
-}
-.float--left {
-  float: left;
-}
-.float--right {
-  float: right;
-}
-
 /* SUMMARY */
-.summary {
-}
+
+/* .summary {
+  font-family: 'Noto Sans KR';
+} */
 
 .summary__title {
   font-size: 38px;
@@ -116,12 +125,12 @@ a {
   margin: 0 auto;
   box-sizing: border-box;
   position: relative;
-  display: flex;
+  /* display: flex; */
 }
 
 /* HEADER */
 header {
-  border-bottom: 1px solid #b097fc9f;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.75);
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.75);
   /* background: #b197fc; */
   background: #fff;
@@ -143,11 +152,11 @@ header .logo {
 }
 
 header .logo a {
-  background: url("https://github.com/juddroid/juddroid.github.io/blob/master/raccoon-responsive/img/favicon/favicon-96x96.png?raw=true");
+  background: url("https://user-images.githubusercontent.com/70361152/107884814-4ddc4680-6f3a-11eb-8b88-c86e843011ca.png");
   background-position: center;
   background-size: cover;
-  width: 70px;
-  height: 70px;
+  width: 40px;
+  height: 40px;
   display: block;
   text-indent: -9999px;
 }
@@ -166,11 +175,11 @@ header .main-menu li a {
   display: block;
   padding: 10px;
   /* color: #3c4146; */
-  color: #333;
+  color: #3c4146;
 }
 
 header .main-menu li a:hover {
-  color: #3c4146;
+  color: #4078c0;
 }
 
 header .mode-group {
@@ -179,6 +188,7 @@ header .mode-group {
   height: 100%;
 }
 
+/* order는 display가 flex인 상황에서만 사용할 수 있다. */
 header .btn-group {
   order: 2;
   display: flex;
@@ -211,16 +221,28 @@ header .sub-menu li a {
   padding: 8px;
   display: block;
   font-size: 13px;
-  color: #333;
+  color: #3c4146;
 }
 
 header .sub-menu li a:hover {
-  color: #3c4146;
+  color: #4078c0;
+}
+
+#toggle-btn {
+  display: none;
+  background: url("../img/toggle-btn.svg");
+  width: 18px;
+  height: 24px;
+  position: absolute;
+  top: 16px;
+  right: 20px;
+  cursor: pointer;
+  text-indent: -9999px;
 }
 
 /* VISUAL */
 .section--visual {
-  background-image: url("https://github.com/juddroid/juddroid.github.io/blob/master/raccoon-responsive/img/KakaoTalk_Photo_2016-08-13-15-44-15%20(1).jpg?raw=true");
+  background-image: url("https://user-images.githubusercontent.com/70361152/107884860-81b76c00-6f3a-11eb-9611-e27a3139c3e6.jpg");
   background-repeat: no-repeat;
   background-position: bottom left;
   background-size: cover;
@@ -238,6 +260,7 @@ header .sub-menu li a:hover {
 
 .section--visual .inner {
   padding: 160px 0;
+  display: flex;
 }
 
 /* flex 단축속성 : 기본값 (grow: 0, shrink: 1,  basis: auto(0)) */
@@ -249,6 +272,7 @@ header .sub-menu li a:hover {
 .section--visual .summary__title {
   color: #fff;
   text-shadow: 0 1px 1px rgba(0, 0, 0, 0.25), 0 1px 25px rgba(0, 0, 0, 0.75);
+  /* font-size: 54px; */
 }
 
 .section--visual .summary__description {
@@ -273,7 +297,6 @@ header .sub-menu li a:hover {
 #sign-form .input--text {
   width: 100%;
   height: 40px;
-  font-size: 14px;
 }
 
 #sign-form .caption {
@@ -326,25 +349,146 @@ header .sub-menu li a:hover {
 }
 
 .section--feature .tiles {
+  border-top: 1px solid #e5e5e5;
+  border-bottom: 1px solid #e5e5e5;
+}
+
+.section--feature .tiles .inner {
+  max-width: 1200px;
 }
 
 .section--feature .tiles ul {
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
 }
 
 .section--feature .tiles li {
-  width: 200px;
-  outline: 1px solid red;
+  /* padding: 34px 24px; */
+  text-align: center;
+  line-height: 1.5;
+  border-right: 1px solid #e5e5e5;
+  box-sizing: border-box;
+  /* float: left; */
+  padding-bottom: 10px;
+  /* max-width: 25%; */
+}
+
+.section--feature .tiles li:last-child {
+  border-right: none;
 }
 
 .section--feature .tiles li img {
-  width: 100%;
-  padding: 50px 20%;
-  box-sizing: border-box;
+  /* padding: 14px 10% 24px;
+  box-sizing: border-box; */
+  max-width: 100%;
+  object-fit: cover;
 }
 
 .section--feature .tiles li h3 {
+  font-size: 16px;
+  font-weight: 800;
+  /* margin-bottom: 5px; */
 }
 
 .section--feature .tiles li p {
+  font-size: 14px;
+  color: #767676;
+}
+
+/* WHERE IS */
+
+.section--where-is .inner {
+  padding-top: 80px;
+}
+
+#map {
+  width: 100%;
+  height: 400px;
+  margin-top: 40px;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  border-bottom: none;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+  box-sizing: border-box;
+}
+
+/* PRICING CARD */
+
+.section--pricing {
+  background: linear-gradient(#f5f5f5, #fff);
+}
+
+.section--pricing .inner {
+  padding: 80px 0;
+}
+
+.section--pricing .card {
+  display: flex;
+  border: 1px solid #e5e5e5;
+  border-radius: 6px;
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
+}
+
+.section--pricing .card .cell {
+  padding: 24px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.section--pricing .card .cell--button .btn {
+  height: 50px;
+  font-size: 16px;
+}
+
+.section--pricing .card .cell--description {
+  font-size: 16px;
+  font-weight: 300;
+  line-height: 1.5;
+  flex: 1;
+  border-left: 1px solid #e5e5e5;
+}
+
+/* FOOTER */
+
+footer .inner {
+  padding: 50px 0;
+  border-top: 1px solid #eee;
+}
+
+footer .site-links {
+  display: flex;
+}
+
+footer .site-links li {
+  font-size: 12px;
+  margin-right: 10px;
+  color: #767676;
+}
+
+footer .site-links li:last-child {
+  margin-right: 0;
+}
+
+footer .site-links li a {
+  color: #4078c0;
+}
+
+footer .site-links li a:hover {
+  text-decoration: underline;
+}
+
+footer .logo {
+  /* 가운데 정렬이 아니라 배치를 해버리는 재미있는 코드 */
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+  width: 24px;
+  height: 24px;
+}
+
+footer .logo:hover svg {
+  fill: #4078c0;
 }
