--- a/fe-w12-airbnb/css/nav.css
+++ b/fe-w12-airbnb/css/nav.css
@@ -1,10 +1,10 @@
 /* NAV: RESERVATION */
 
 .reservation__container {
-  min-width: 850px;
-  height: 66px;
+  height: 64px;
   display: flex;
   justify-content: center;
+  position: relative;
 }
 
 .visible--hidden {
@@ -17,15 +17,21 @@
 
 .reservation__box--airbnb,
 .reservation__box--activity {
+  display: flex;
+  justify-content: center;
+  width: 850px;
   height: 100%;
-  box-sizing: border-box;
+  position: relative;
+  z-index: 1;
 }
 
 .reservation__label--box {
   background: #fff;
   display: flex;
   align-items: center;
-  border-radius: 50px;
+  border-radius: 32px;
+
+  box-shadow: rgba(0, 0, 0, 0.15) 0px 16px 32px, rgba(0, 0, 0, 0.1) 0px 3px 8px;
 }
 
 .reservation__menu__box {
@@ -53,8 +59,29 @@
   cursor: pointer;
 }
 
+.leftside__radius__box--hover {
+  min-width: 270px;
+  padding: 14px 32px;
+  background: #ebebeb;
+  border-radius: 50px;
+  box-sizing: border-box;
+  cursor: pointer;
+  /* z-index: 1; */
+}
+
+.leftside__radius__box--active {
+  min-width: 270px;
+  background: #fff;
+  border-radius: 50px;
+  padding: 14px 32px;
+  box-sizing: border-box;
+  box-shadow: rgba(0, 0, 0, 0.2) 0px 6px 20px;
+  cursor: pointer;
+  /* z-index: 1; */
+}
+
 .leftside__radius__box--activity {
-  width: 400px;
+  width: 410px;
   background: #fff;
   padding: 14px 32px;
   border-top-left-radius: 50px;
@@ -62,21 +89,25 @@
   box-sizing: border-box;
   cursor: pointer;
 }
+.leftside__radius__box--activity--active {
+  width: 410px;
+  background: #fff;
+  padding: 14px 32px;
+  border-radius: 50px;
+  box-shadow: rgba(0, 0, 0, 0.2) 0px 6px 20px;
+  box-sizing: border-box;
+  cursor: pointer;
+  z-index: 1;
+  position: relative;
+}
 
-.leftside__radius__box:hover {
+.leftside__radius__box--activity--hover {
   background: #ebebeb;
   border-radius: 50px;
-}
-.leftside__radius__box:hover + div {
-  border-right: 1px solid #fff;
-}
-
-.leftside__radius__box--activity:hover {
-  background: #ebebeb;
-  border-radius: 50px;
-}
-.leftside__radius__box--activity:hover + div {
-  border-right: 1px solid #fff;
+  width: 410px;
+  padding: 14px 32px;
+  box-sizing: border-box;
+  cursor: pointer;
 }
 
 input {
@@ -88,17 +119,27 @@ input {
   padding: 14px 24px;
   box-sizing: border-box;
   cursor: pointer;
-  /* display: none; */
 }
 
 /* 양쪽 다 middle bar를 없애는 방법이 없을까... */
-.middle__box:hover {
+/* 새로운 사실: 와.. 얘네 막대기가 두개인것 같고, before after로 생성되고 있는 것 같다. */
+/* 나중에 다시 파헤쳐야지 */
+.middle__box--hover {
   background: #ebebeb;
   border-radius: 50px;
+  padding: 14px 24px;
+  box-sizing: border-box;
+  cursor: pointer;
 }
 
-.middle__box:hover + div {
-  border-right: 1px solid #fff;
+.middle__box--active {
+  background: #fff;
+  padding: 14px 24px;
+  border-radius: 50px;
+  box-sizing: border-box;
+  box-shadow: rgba(0, 0, 0, 0.2) 0px 6px 20px;
+  cursor: pointer;
+  /* z-index: 2; */
 }
 
 .middle__bar {
@@ -106,36 +147,48 @@ input {
   height: 32px;
 }
 
+.middle__bar--hover {
+  border-right: 1px solid #fff;
+  height: 32px;
+  z-index: -1;
+}
+
 .rightside__radius__box {
-  width: 100%;
+  width: 220px;
   background: #fff;
-  border-top-right-radius: 50px;
-  border-bottom-right-radius: 50px;
+  border-top-right-radius: 32px;
+  border-bottom-right-radius: 32px;
   padding: 14px 24px;
-  padding-right: 10px;
+  position: relative;
   box-sizing: border-box;
   cursor: pointer;
   display: flex;
   height: 100%;
   align-items: center;
+  justify-content: space-between;
 }
-.rightside__radius__box:hover {
+.rightside__radius__box--hover {
   background: #ebebeb;
-  border-radius: 50px;
-}
-
-.rightside__radius__box:hover + div {
-  border-right: 1px solid #fff;
+  border-radius: 32px;
+  width: 220px;
+  padding: 14px 24px;
+  position: relative;
+  box-sizing: border-box;
+  cursor: pointer;
+  display: flex;
+  height: 100%;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .rightside__radius__box--activity {
-  width: 440px;
+  width: 438px;
   height: 100%;
   background: #fff;
-  border-top-right-radius: 50px;
-  border-bottom-right-radius: 50px;
+  border-top-right-radius: 32px;
+  border-bottom-right-radius: 32px;
   padding: 14px 24px;
-  padding-right: 10px;
+  position: relative;
   box-sizing: border-box;
   cursor: pointer;
   display: flex;
@@ -143,7 +196,31 @@ input {
   justify-content: space-between;
 }
 
-.rightside__radius__box--activity:hover {
+.rightside__radius__box--activity--active {
+  width: 438px;
+  height: 100%;
+  background: #fff;
+  border-radius: 50px;
+  padding: 14px 24px;
+  position: relative;
+  box-sizing: border-box;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  box-shadow: rgba(0, 0, 0, 0.2) 0px 6px 20px;
+}
+
+.rightside__radius__box--activity--hover {
+  width: 438px;
+  height: 100%;
+  padding: 14px 24px;
+  position: relative;
+  box-sizing: border-box;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
   background: #ebebeb;
   border-radius: 50px;
 }
@@ -158,6 +235,9 @@ input {
   border-radius: 50px;
   box-sizing: border-box;
   cursor: pointer;
+  position: absolute;
+  top: 8px;
+  right: 9px;
 }
 
 .search__circle > svg {
@@ -170,4 +250,215 @@ input {
   font-size: 12px;
   font-weight: 500;
   line-height: 18px;
+  position: relative;
+}
+
+.location__container {
+  background: #fff;
+  width: 500px;
+  height: 104px;
+  margin: 12px 0 0;
+  position: absolute;
+  left: 50px;
+  top: 100%;
+  z-index: 20;
+  border-radius: 32px;
+  box-shadow: rgba(0, 0, 0, 0.2) 0px 6px 20px;
+  max-height: calc(100vh - 220px);
+  overflow: hidden auto;
+  font-size: 17px;
+  color: rgba(0, 0, 0, 0.6);
+  display: flex;
+}
+
+.location__box {
+  height: 100%;
+  display: flex;
+  align-items: center;
+  width: 100%;
+}
+
+.location--li {
+  width: 500px;
+  height: 64px;
+  padding: 16px 32px;
+  box-sizing: border-box;
+  display: flex;
+  align-items: center;
+  outline: none;
+}
+
+.location--li:hover {
+  background: rgba(0, 0, 0, 0.03);
+  outline: none;
+}
+
+.visible--hidden {
+  display: none;
+}
+
+.location--img-box {
+  width: 48px;
+  height: 48px;
+  margin-right: 16px;
+}
+
+.location--img {
+  object-fit: cover;
+  border-radius: 8px;
+  width: 100%;
+}
+
+.calendar__container {
+  width: 785px;
+  height: 340px;
+  padding: 16px 32px;
+  position: absolute;
+  /* left: 120px; */
+  top: 100%;
+  z-index: 4;
+  background: rgb(255, 255, 255);
+  border-radius: 32px;
+  box-shadow: rgba(0, 0, 0, 0.2) 0px 6px 20px;
+  margin-top: 12px;
+  max-height: calc(100vh - 220px);
+  padding: 16px 32px;
+}
+
+.calendar__wrapper {
+  height: 328px;
+  display: flex;
+  justify-content: center;
+}
+
+.calendar__box {
+  width: 336px;
+  height: 328px;
+  padding: 0 27px;
+  position: relative;
+}
+
+.calendar__button__box {
+  position: absolute;
+  top: 15px;
+  left: 60px;
+  z-index: 3;
+}
+
+.calendar--upper {
+  height: 22px;
+  padding: 22px 0 37px 0;
+  position: relative;
+}
+
+.calendar--table {
+  width: 100%;
+  height: 247px;
+  border-spacing: 0px 2px;
+}
+
+.monthly--title {
+  font-size: 14px;
+  color: rgb(34, 34, 34);
+  font-weight: 600;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.weekdays {
+  position: absolute;
+  left: 0;
+  padding: 0 27px;
+  color: rgb(117, 117, 117);
+  top: 62px;
+  text-align: left;
+  box-sizing: border-box;
+}
+
+.weekdays--ul {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 336px;
+  height: 20px;
+  margin: 1px 0;
+  list-style: none;
+  font-size: 13px;
+}
+
+.weekdays--li {
+  /* 왜 3px이 모자랐는가... */
+  width: 45px;
+  height: 16px;
+  display: inline-block;
+  text-align: center;
+  /* outline: 1px solid pink; */
+}
+
+.calendar--table > tbody > tr > td {
+  box-sizing: border-box;
+  font-size: 14px;
+  cursor: default;
+  height: 47px;
+}
+
+.calendar--table > tbody > tr > td > div {
+  width: 48px;
+  height: 47px;
+  /* outline: 1px solid pink; */
+  color: rgb(34, 34, 34);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #222;
+  font-weight: 500;
+}
+
+/* 나중에 바꿔야 될 수도 있지만... */
+.calendar--table > tbody > tr > td > div:hover {
+  width: 45px;
+  height: 44px;
+  color: rgb(34, 34, 34);
+  border-radius: 50px;
+  background: rgb(255, 255, 255);
+  border: 1.5px solid rgb(34, 34, 34);
+}
+
+.calendar__prev--button-box {
+  display: inline-block;
+  position: absolute;
+  top: 13px;
+  left: -10px;
+  cursor: pointer;
+}
+
+.calendar__next--button-box {
+  display: inline-block;
+  position: absolute;
+  top: 13px;
+  left: 710px;
+  cursor: pointer;
+  z-index: 1;
+}
+
+.calendar--button {
+  width: 32px;
+  height: 32px;
+  border: none;
+  outline: none;
+  background: transparent;
+  cursor: pointer;
+  border-radius: 50px;
+}
+
+.calendar--button:hover {
+  background: rgb(247, 247, 247);
+}
+
+.calendar--button > span > svg {
+  width: 10px;
+  height: 10px;
+  fill: rgb(34, 34, 34);
 }
