--- a/fe-w12-airbnb/css/nav.css
+++ b/fe-w12-airbnb/css/nav.css
@@ -318,7 +318,6 @@ input {
   width: 785px;
   padding: 16px 32px;
   position: absolute;
-  /* left: 120px; */
   top: 100%;
   z-index: 4;
   background: rgb(255, 255, 255);
@@ -327,6 +326,7 @@ input {
   margin-top: 12px;
   max-height: calc(100vh - 220px);
   padding: 16px 32px;
+  transition: height 0.2s ease-in-out 0s;
 }
 
 .calendar__wrapper {
@@ -359,7 +359,7 @@ input {
 
 .calendar--table {
   width: 100%;
-  height: 247px;
+
   border-spacing: 0px 2px;
 }
 
@@ -407,7 +407,6 @@ input {
   box-sizing: border-box;
   font-size: 14px;
   cursor: default;
-  height: 47px;
   vertical-align: top;
 }
 
@@ -423,14 +422,24 @@ input {
   font-weight: 500;
 }
 
-/* 나중에 바꿔야 될 수도 있지만... */
-.calendar--table > tbody > tr > td > div:hover {
+.calendar--table > tbody > tr > td > .day-box-data:hover {
   width: 45px;
   height: 44px;
   color: rgb(34, 34, 34);
   border-radius: 50px;
   background: rgb(255, 255, 255);
   border: 1.5px solid rgb(34, 34, 34);
+}
+
+.calendar--table > tbody > tr > td > .day-box-data:active {
+  background: rgb(34, 34, 34);
+  color: rgb(255, 255, 255);
+}
+
+.calendar--table > tbody > tr > td .day-box-data--pick {
+  background: rgb(34, 34, 34);
+  color: rgb(255, 255, 255);
+  border-radius: 50px;
 }
 
 .calendar__prev--button-box {
