[HTML] 버튼 2개 수정 완료

--- a/fe-w3-shopping/main.scss
+++ b/fe-w3-shopping/main.scss
@@ -129,7 +129,8 @@ header {
       font-size: 0;
       line-height: 0;
       text-indent: -9999px;
-      background: url(//shop1.daumcdn.net/search/cdn/simage/shopping/v2/common/nav/ico_gnb_shw.png) no-repeat;
+      background: url(http://shop1.daumcdn.net/search/cdn/simage/shopping/v2/common/nav/ico_gnb_shw.png)
+        no-repeat;
       background-size: 130px 90px;
     }
 
@@ -180,7 +181,8 @@ header {
       font-size: 0;
       line-height: 0;
       text-indent: -9999px;
-      background: url(//shop1.daumcdn.net/search/cdn/simage/shopping/v2/common/nav/ico_gnb_shw.png) no-repeat;
+      background: url(http://shop1.daumcdn.net/search/cdn/simage/shopping/v2/common/nav/ico_gnb_shw.png)
+        no-repeat;
       background-size: 130px 90px;
     }
 
@@ -306,7 +308,8 @@ header {
         font-size: 0;
         line-height: 0;
         text-indent: -9999px;
-        background: url(//shop1.daumcdn.net/search/cdn/simage/shopping/v2/common/nav/ico_gnb_shw.png) no-repeat;
+        background: url(http://shop1.daumcdn.net/search/cdn/simage/shopping/v2/common/nav/ico_gnb_shw.png)
+          no-repeat;
         background-size: 130px 90px;
       }
 
@@ -341,7 +344,8 @@ header {
           font-size: 0;
           line-height: 0;
           text-indent: -9999px;
-          background: url(//shop1.daumcdn.net/search/cdn/simage/shopping/v2/common/nav/ico_gnb_shw.png) no-repeat;
+          background: url(http://shop1.daumcdn.net/search/cdn/simage/shopping/v2/common/nav/ico_gnb_shw.png)
+            no-repeat;
           background-size: 130px 90px;
         }
 
@@ -521,7 +525,8 @@ section {
                   // height: 25px;
                   font-size: 0;
                   line-height: 0;
-                  background: url(//shop1.daumcdn.net/search/cdn/simage/shopping/v2/common/img_home_150131.png) no-repeat;
+                  background: url(http://shop1.daumcdn.net/search/cdn/simage/shopping/v2/common/img_home_150131.png)
+                    no-repeat;
                   text-indent: -9999px;
                 }
               }
@@ -643,7 +648,8 @@ section {
                       float: left;
                       height: 18px;
                       margin: 11px 4px 0 0;
-                      background: url(//shop1.daumcdn.net/search/cdn/simage/shopping/img/ico_comm2_150514.gif) no-repeat;
+                      background: url(http://shop1.daumcdn.net/search/cdn/simage/shopping/img/ico_comm2_150514.gif)
+                        no-repeat;
                       display: block;
                       overflow: hidden;
                       text-indent: -9999px;
@@ -668,14 +674,16 @@ section {
             width: 41px;
             height: 41px;
             margin-top: -58px;
-            background: url(//shop1.daumcdn.net/search/cdn/simage/shopping/specials/ico_eventlist_141110_v3.png) 0 -340px no-repeat;
+            background: url(http://shop1.daumcdn.net/search/cdn/simage/shopping/specials/ico_eventlist_141110_v3.png)
+              0 -340px no-repeat;
           }
           .ico--home {
             width: 9px;
             height: 17px;
             font-size: 0;
             line-height: 0;
-            background: url(//shop1.daumcdn.net/search/cdn/simage/shopping/specials/ico_eventlist_141110_v2.png) no-repeat;
+            background: url(http://shop1.daumcdn.net/search/cdn/simage/shopping/specials/ico_eventlist_141110_v2.png)
+              no-repeat;
             display: block;
             text-indent: -9999px;
           }
@@ -951,6 +959,14 @@ section {
     }
   }
 
+  .button--home {
+    display: block;
+    font-size: 0;
+    line-height: 0;
+    background: url(http://shop1.daumcdn.net/search/cdn/simage/shopping/v2/common/img_home_190702.png)
+      no-repeat;
+    text-indent: -9999px;
+  }
   .contents__etc {
     .banner--item {
       overflow: hidden;
@@ -981,6 +997,19 @@ section {
         border: 1px solid #e4e4e4;
         border-bottom: 0;
         background-color: #fff;
+
+        .button--home {
+          left: 1246px;
+          position: absolute;
+          bottom: -1px;
+          // left: 948px;
+          width: 29px;
+          height: 29px;
+          background-position: -105px -220px;
+          padding: 0;
+          background-color: black;
+        }
+
         .contents-partner {
           overflow: hidden;
           height: 110px;
@@ -1015,23 +1044,6 @@ section {
             }
           }
         }
-        .button--home {
-          left: 1246px;
-          position: absolute;
-          bottom: -1px;
-          // left: 948px;
-          width: 29px;
-          height: 29px;
-          background-position: -105px -220px;
-          display: block;
-          font-size: 0;
-          line-height: 0;
-          background: url(//shop1.daumcdn.net/search/cdn/simage/shopping/v2/common/img_home_190702.png) no-repeat;
-          text-indent: -9999px;
-          overflow: hidden;
-          vertical-align: middle;
-          padding: 0;
-        }
       }
       .link--all {
         position: absolute;
@@ -1040,7 +1052,8 @@ section {
         padding-right: 9px;
         font-size: 12px;
         line-height: 13px;
-        background: url(//shop1.daumcdn.net/search/cdn/simage/shopping/v2/common/ico_comm2_141128.gif) 100% -273px no-repeat;
+        background: url(http://shop1.daumcdn.net/search/cdn/simage/shopping/v2/common/ico_comm2_141128.gif)
+          100% -273px no-repeat;
         letter-spacing: -1px;
         color: #666;
       }
@@ -1074,7 +1087,8 @@ section {
           height: 15px;
           margin-top: 1px;
           padding-left: 7px;
-          background: url(//shop1.daumcdn.net/search/cdn/simage/shopping/img/ico_comm2_150514.gif) no-repeat;
+          background: url(http://shop1.daumcdn.net/search/cdn/simage/shopping/img/ico_comm2_150514.gif)
+            no-repeat;
           display: block;
           overflow: hidden;
           text-indent: -9999px;
@@ -1104,6 +1118,7 @@ section {
     height: 49px;
     border-top: 1px solid #e4e4e4;
     border-bottom: 1px solid #e4e4e4;
+    text-align: left;
   }
 
   .wrap_info {
@@ -1125,6 +1140,10 @@ section {
       font-size: 15px;
       vertical-align: top;
       line-height: 51px;
+
+      strong {
+        font-weight: 600;
+      }
     }
 
     .txt_bar {
@@ -1183,6 +1202,14 @@ section {
 #wrapMinidaum {
   display: none;
 }
+.ico_home {
+  display: block;
+  font-size: 0;
+  line-height: 0;
+  background: url(http://shop1.daumcdn.net/search/cdn/simage/shopping/v2/common/img_home_190702.png)
+    no-repeat;
+  text-indent: -9999px;
+}
 
 .btn_follow {
   overflow: hidden;
@@ -1195,4 +1222,10 @@ section {
   padding: 15px 11px;
   border: 1px solid #aeaeae;
   background-color: #fff;
+
+  .ico_follow {
+    width: 17px;
+    height: 9px;
+    background-position: 0 -350px;
+  }
 }
